--- a/src/app/dashboard/booksManagement/authors/add-author/addAuthor.module.css
+++ b/src/app/dashboard/booksManagement/authors/add-author/addAuthor.module.css
@@ -132,7 +132,6 @@
   transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* خلي الهوفر يطبق بس على الزر */
 .fileInput::file-selector-button:hover {
   background-color: #ffda7d;
 }
@@ -158,7 +157,7 @@
 }
 
 .submitButton:hover {
-  background-color: #382c50; /* A darker shade of primary */
+  background-color: #382c50;
 }
 
 .submitButton:disabled {
